# cpp_animation

./: CMakeLists.txt  build.bat  shell.bat
Chapter01/: build.bat
Chapter01/src/: WinMain.cpp
src/: DebugDraw.cpp  DebugDraw.h  GLTFLoader.cpp  GLTFLoader.h  WinMain.cpp  clip.cpp  clip.h  draw.cpp  draw.h  index_buffer.cpp  mat4.h  pose.cpp  pose.h  quat.cpp  quat.h  sample.cpp  sample.h  shader.cpp  shader.h  texture.cpp  track.cpp  transform.cpp  transform.h  transform_track.cpp  transform_track.h  uniform.cpp  vec2.h  vec3.h
